--- a/friends.html
+++ b/friends.html
@@ -106,7 +106,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is super big :(</span>
+      <span>Your screen is too big 😯</span>
     </div>
     <div id="no-landscape">
       <span>Landscape Mode is not available :(</span>
